--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ First HTML File
 <br><br>
 <img src="https://source.unsplash.com/user/erondu/" alt="Trip" width="800" height="400" style="img-align:center">
 <br>
-<img src="A:\Private\Birthday Photos\DSC_0140.jpg" width="800" height="400">
+<img src="DSC_0140.jpg" width="800" height="400">
 <br>
-<img src="C:\Users\ashi1\OneDrive\Desktop\german_shepherd.jpg" width="800" height="400">
+<img src="german_shepherd.jpg" width="800" height="400">
 </body>
 </html>
