--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ First HTML File
 <br><br>
 <img src="https://source.unsplash.com/user/erondu/" alt="Trip" width="800" height="400" style="img-align:center">
 <br>
-<img src="DSC_0140.jpg" width="800" height="400">
+<img src="DSC_0140.JPG" width="800" height="400">
 <br>
 <img src="german_shepherd.jpg" width="800" height="400">
 </body>
