--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ First HTML File
 <body style="background-color: powderblue">
 <h1 style="text-align:center;">Introduction</h1>
 <p style="font-family:verdana;text-align:center;">Ashish is a good boy.</p>
-<marquee>FAN OF ISHITA</marquee>
+<marquee>FAN OF MAHI</marquee>
 <a href="https://www.facebook.com" style="text-align:center;">FACEBOOK</a>
 <br><br>
 <img src="https://source.unsplash.com/user/erondu/" alt="Trip" width="800" height="400" style="img-align:center">
